fix(cmake): use the 'STATIC' argument for 'translations_library'
Fix running qTox in environments that set 'BUILD_SHARED_LIBS=ON' at
build-time.

Thanks-to: Andreas Sturmlechner <asturm@gentoo.org>
Closes: https://github.com/qTox/qTox/issues/6183

--- a/translations/CMakeLists.txt
+++ b/translations/CMakeLists.txt
@@ -81,7 +81,7 @@ endfunction()
 generate_translation_resource()
 configure_file(${CMAKE_CURRENT_BINARY_DIR}/translations.qrc.in ./translations.qrc COPYONLY)
 
-add_library(translations_library ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc)
+add_library(translations_library STATIC ${CMAKE_CURRENT_BINARY_DIR}/translations.qrc)
 
 # An explicit dependency is needed or AUTORCC will run before the translation files are created
 set_target_properties(translations_library PROPERTIES AUTOGEN_TARGET_DEPENDS "${translations_FILES}")
